k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: naruon-dev
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: backend
