k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: naruon-dev
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres-db
