k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: naruon-dev
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: frontend
